--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -22,7 +22,7 @@
 
 		<div class="price_line">
 			<span class="price">
-				<%= product.price %>
+				<%= number_to_currency(product.price) %>
 			</span>
 		</div>
 	</div>
