--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,6 +1,9 @@
 <div>
-
+<% if line_item == @current_item %>
+	<tr id="current_item">
+<% else %>
 	<tr>
+<% end %>
 		<td><%= line_item.quantity %>&times;</td>
 		<td><%= line_item.product.title %></td>
 		<td class="item_price">
