--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -13,6 +13,6 @@
 	</tr>
 	<tr>
 		<td></td>
-		<td><%= button_to 'Remove', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		<td><%= button_to 'Remove', line_item, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></td>
 	</tr>
 </div>
