--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,4 +9,8 @@
 	</tr>
 </table>
 
+<div id="checkout_button">
+	<%= button_to 'Checkout', new_order_path, method: :get %>
+</div>
+
 <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
