--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,4 @@
-<h2>Your Cart</h2>
+<h2><%= t('.title') %></h2>
 <table>
 	<%= render(cart.line_items) %>
 	<tr class="total_line">
@@ -10,7 +10,7 @@
 </table>
 
 <div id="checkout_button">
-	<%= button_to 'Checkout', new_order_path, method: :get %>
+	<%= button_to t('.checkout'), new_order_path, method: :get %>
 </div>
 
-<%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
+<%= button_to t('.empty'), cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
