--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,10 +1,12 @@
-<h1>New order</h1>
+<div id="new_order">
+	<h1>New order</h1>
 
-<div class="depot_form">
-	<fieldset>
-		<legend>Please Enter Your Details</legend>
-		<%= render 'form' %>
-	</fieldset>
+	<div class="depot_form">
+		<fieldset>
+			<legend><%= t('.legend') %></legend>
+			<%= render 'form' %>
+		</fieldset>
+	</div>
+
+	<%= link_to 'Back', orders_path %>
 </div>
-
-<%= link_to 'Back', orders_path %>
