--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -6,7 +6,7 @@
 
 <% end %>
 
-<h1>Your Pragmatic Catalog</h1>
+<h1><%= t('.title_html') %></h1>
 
 <% if session[:counter] > 5 %>
 	<%= "You have visited this page" %>
@@ -28,7 +28,7 @@
 		<div class="price_line">
 			<span class="price">
 				<%= number_to_currency(product.price) %>
-				<%= button_to 'Add to Cart', line_items_path(product_id: product), remote: true %>
+				<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true %>
 			</span>
 		</div>
 	</div>
